Sizing issues on mobile.

--- a/assets/sass/_home-page.scss
+++ b/assets/sass/_home-page.scss
@@ -7,8 +7,11 @@
         color: var(--text-minor);
         background-color: var(--light-grey);
         height: auto; 
-        top: 20%;
+        top: 10%;
 
+        @include screen-width('medium') {
+					top: 20%;
+				}
 
         @include screen-width('desktop') {
             top: 23%;
